# CarND-Vehicle-Detection

./: .gitignore  CarND-Vehical-Detection-Tutorial.ipynb  CarND-Vehical-Detection.ipynb  CarND-Vehicle-Detection-2.ipynb  CarND-Vehicle-Detection-Tutorial.ipynb  svc_pickle.p  svc_pickle_final.p  vehicle_detection.py  vehicle_small_dataset.7z  writeup.md
.ipynb_checkpoints/: CarND-Vehical-Detection-2-checkpoint.ipynb  CarND-Vehical-Detection-Tutorial-checkpoint.ipynb  CarND-Vehical-Detection-checkpoint.ipynb  CarND-Vehicle-Detection-checkpoint.ipynb
hyper_param_grid_search/: HSV01.csv_r2.txt  HSV02.csv_r2.txt  LUV01.csv_r2.txt  LUV02.csv_r2.txt  RGB01.csv_r2.txt  RGB02.csv_r2.txt  YCrCb01.csv_r2.txt  YCrCb02.csv_r2.txt  find_best_param.py  find_best_param_round2.py  first_round_statistics.xlsx  param_testHSV.csv  param_testLUV.csv  param_testRGB.csv  param_testYCrCb.csv  second_round_statistics.xlsx
hyper_param_grid_search/job/: HSV01.csv  HSV02.csv  LUV01.csv  LUV02.csv  RGB01.csv  RGB02.csv  YCrCb01.csv  YCrCb02.csv  round2.csv
toolset/: Sample toolkits.docx
toolset/lane_detection/: .gitignore  CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  birdView.cpp  featureExtraction.cpp  laneDetection.cpp  line.h  videoprocessor.h
toolset/simple_opencv/: DisplayImage.cpp
toolset/simple_qt/: CMakeLists.txt  main.cpp
